--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc --noEmit && vite build",
     "preview": "vite preview",
     "start:basic": "vite serve --open ./index.basic.html",
     "start:advanced": "vite serve --open ./src/advanced/index.html",
@@ -18,6 +18,9 @@
     "@eslint/js": "^9.24.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.0",
     "@vitest/ui": "^3.1.1",
     "eslint": "^9.24.0",
@@ -26,11 +29,13 @@
     "eslint-plugin-react": "^7.37.5",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
+    "typescript": "^5.8.3",
     "vite": "^6.2.6",
     "vitest": "^3.1.1"
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "zustand": "^5.0.3"
   }
 }
